<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/White"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingRight="4dp" >

    <Button
        android:id="@+id/cropPlanning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/greybuttons"
        android:text="@string/planning"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:color="@color/White" />

    <Button
        android:id="@+id/seeding"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/greybuttons"
        android:text="@string/seeding"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <Button
        android:id="@+id/planting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/greybuttons"
        android:text="@string/planting"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <Button
        android:id="@+id/growing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/greybuttons"
        android:text="@string/growing"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <Button
        android:id="@+id/harvesting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/greybuttons"
        android:text="@string/harvesting"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <Button
        android:id="@+id/selling"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/greybuttons"
        android:text="@string/selling"
        android:textColor="@color/White"
        android:textStyle="bold" />

</LinearLayout>