<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/choicesupply"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/White" >

        <Button
            android:id="@+id/under"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/greybuttons"
            android:text="@string/under"
            android:textAppearance="@style/ButtonTextMedium"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <Button
            android:id="@+id/normal"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/under"
            android:layout_alignRight="@+id/under"
            android:layout_below="@+id/under"
            android:background="@drawable/greybuttons"
            android:text="@string/normal"
            android:textAppearance="@style/ButtonTextMedium"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <Button
            android:id="@+id/over"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/normal"
            android:layout_margin="18dp"
            android:background="@drawable/greybuttons"
            android:text="@string/over"
            android:textAppearance="@style/ButtonTextMedium"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <Button
            android:id="@+id/historyc"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/over"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/over"
            android:layout_marginBottom="5dp"
            android:background="@drawable/greybuttons"
            android:text="@string/history"
            android:textColor="@color/White" />

    </RelativeLayout>
