<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/sezione_controlli"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_margin="2sp"
        android:background="@color/White" >

        <Button
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2sp"
            android:background="@android:drawable/arrow_up_float" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/down"
            android:layout_below="@+id/up"
            android:background="@android:color/black"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout_riga"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/White"
                android:orientation="vertical" >

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2sp"
            android:background="@android:drawable/arrow_down_float" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/controlli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/home"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:drawable/btn_default"
            android:text="@string/home"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/sezione_confronta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/home"
            android:layout_marginTop="5sp" >
        </RelativeLayout>

        <Button
            android:id="@+id/Back"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:drawable/btn_default"
            android:text="@string/back"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/confronta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/btn_default"
            android:text="@string/confronta"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</LinearLayout>